Misc [FIX] Fixes callout z-index bug + adds support to the 'x-short' input length

--- a/src/core/elements/_callout.less
+++ b/src/core/elements/_callout.less
@@ -4,6 +4,7 @@
  * --------------------------------------------------------------------------- */
 
 .lui.callout {
+	z-index: 1;
 	display: block;
 	box-sizing: border-box;
 	position: relative;
