--- a/src/core/elements/_input.less
+++ b/src/core/elements/_input.less
@@ -60,6 +60,7 @@
 
 // Inputs length (horizontal sizing)
 // =====
+.lui.input.x-short, .lui.field.x-short > input { min-width: 0; width: 5em !important; }
 .lui.input.short, .lui.field.short > input { min-width: 0; width: 8em !important; }
 .lui.input.medium, .lui.field.medium > input { min-width: 0; width: 15em !important; }
 .lui.input.long, .lui.field.long > input { min-width: 0; width: 20em !important; }
